--- a/department.ipynb
+++ b/department.ipynb
@@ -491,7 +491,7 @@
     "from openai import OpenAI\n",
     "\n",
     "# 設置最新的API密鑰\n",
-    "api_key = 'sk-proj-WPlcWD0mNjksNLyAcIxQT3BlbkFJe6ECafBr1b8gnTgLuz9H'  # 替換為你的最新API密鑰\n",
+    "api_key = ''  # 替換為你的最新API密鑰\n",
     "\n",
     "# 實例化OpenAI客戶端\n",
     "client = OpenAI(api_key=api_key)\n",
