--- a/word2vec/word2vec model_final.ipynb
+++ b/word2vec/word2vec model_final.ipynb
@@ -65,7 +65,7 @@
     "# from openai import OpenAI\n",
     "\n",
     "# # 初始化 OpenAI 客户端\n",
-    "# api_key = 'sk-proj-WPlcWD0mNjksNLyAcIxQT3BlbkFJe6ECafBr1b8gnTgLuz9H'\n",
+    "# api_key = ''\n",
     "# client = OpenAI(api_key=api_key)\n",
     "\n",
     "# # 读取原始的 Excel 文件\n",
